# clickpro-app

./: .env.example  .gitignore  ARCHITECTURE.md  App.tsx  CLOUD_SYNC_SETUP.md  DEPLOYMENT.md  README.md  _redirects  db.ts  demo.html  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts  wrangler.toml
.config/.wrangler/: metrics.json
.diagnostics/: log-show.txt  release-build.txt  run-bin-debug.txt  tauri-build-debug.txt  tauri-dev.txt
.github/workflows/: release.yml
.wrangler/cache/: pages.json
OptimusAssets/contikpro/: README.md  icon.icns
components/: DocumentHTMLPreview.tsx  ErrorBoundary.tsx  Layout.tsx  Sidebar.tsx  UI.tsx
dist-landing/: index.html
docs/: NOTARIZATION.md
landing/: index.html
pages/: Communications.tsx  ContactList.tsx  Contacts.tsx  Dashboard.tsx  Documents.tsx  Expenses.tsx  InboxPage.tsx  Items.tsx  Templates.tsx
public/: generate-icons.html
public/landing/: index.html
scripts/: diag-run.sh  notarize-mac.sh  publish-landing.sh  release-mac.sh
services/: automationService.ts  backupService.ts  pdfGenerator.ts
src/: env.d.ts  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CloudSyncButton.tsx  DataFolderSetup.tsx  DesktopBackup.tsx  DocumentHTMLPreview.tsx  EmailTemplateEditor.tsx  InstallPrompt.tsx  VersionBadge.tsx
src/config/: emailThemes.ts  emailVariables.ts
zip claude/: index.html
(+86 files in other folders)
