[package]
name = "clickpro"
version = "2.0.0"
description = "ClickPro — Local Desktop Application"
authors = ["Potencore"]
edition = "2021"

[lib]
name = "clickpro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "clickpro"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[profile.dev]
incremental = true

[profile.release]
panic = "unwind"
debug = 1
codegen-units = 1
lto = true
opt-level = "s"
strip = false

